cmake_minimum_required(VERSION 3.16)

add_library(domino_core STATIC
    core/types.c
    core/dg_order_key.c
    core/dg_det_hash.c
    core/dg_pose.c
    core/dg_quant.c
    core/fixed.c
    core/fixed_debug.c
    core/rng.c
    core/d_subsystem.c
    core/d_model.c
    core/d_subsystems_init.c
    core/d_registry.c
    core/d_tlv_schema.c
    core/d_container_state.c
    core/d_account.c
    core/d_org.c
    core/d_org_validate.c
    content/d_blueprint.c
    content/d_content_schema.c
    content/d_content.c
    content/d_content_validate.c
    policy/d_policy.c
    policy/d_policy_validate.c
    research/d_research_state.c
    research/d_research_validate.c
    econ/d_econ_metrics.c
    econ/d_econ_validate.c
    ai/d_agent.c
    agent/dg_agent.c
    agent/dg_agent_comp.c
    agent/mind/dg_mind.c
    agent/mind/dg_mind_registry.c
    agent/act/dg_intent_buffer.c
    agent/act/dg_intent_dispatch.c
    agent/group/dg_group.c
    agent/group/dg_group_ctrl.c
    app/startup.c
    cli/cli.c
    tui/tui.c
    render/d_gfx.c
    render/soft/d_gfx_soft.c
    input/input.c
    input/ime.c
    state/state.c
    system/sys.c
    system/d_system.c
    system/d_system_input.c
    system/dsys_term.c
    $<$<BOOL:${WIN32}>:system/dsys_proc_winnt.c>
    $<$<BOOL:${WIN32}>:system/dsys_window_winnt.c>
    $<$<NOT:$<BOOL:${WIN32}>>:system/dsys_window_stub.c>
    $<$<NOT:$<BOOL:${WIN32}>>:system/dsys_proc_stub.c>
    pkg/repo.c
    world/d_serialize.c
    world/d_world.c
    world/d_worldgen.c
    world/d_world_terrain.c
    world/d_litho.c
    world/d_litho_validate.c
    world/frame/d_world_frame.c
    world/frame/dg_frame.c
    world/frame/dg_frame_graph.c
    world/frame/dg_frame_eval.c
    world/frame/dg_anchor.c
    world/domain/dg_domain.c
    world/domain/dg_domain_registry.c
    world/domain/dg_domain_query.c
    world/domain/dg_domain_lod.c
    res/d_res.c
    res/d_res_validate.c
    res/dg_tlv_schema.c
    res/dg_tlv_validate.c
    res/dg_tlv_canon.c
    res/d_res_model_strata.c
    env/d_env.c
    env/d_env_volume.c
    env/d_env_validate.c
    hydro/d_hydro.c
    hydro/d_hydro_validate.c
    build/d_build.c
    build/d_build_validate.c
    trans/d_trans.c
    trans/d_trans_validate.c
    trans/model/dg_trans_alignment.c
    trans/model/dg_trans_section.c
    trans/model/dg_trans_attachment.c
    trans/model/dg_trans_junction.c
    trans/compile/dg_trans_compile.c
    trans/compile/dg_trans_microseg.c
    trans/compile/dg_trans_frame.c
    trans/compile/dg_trans_slotmap.c
    trans/compile/dg_trans_dirty.c
    struct/d_struct.c
    struct/d_struct_instance.c
    struct/d_struct_blueprint.c
    struct/d_struct_validate.c
    struct/model/dg_struct_instance.c
    struct/model/dg_struct_footprint.c
    struct/model/dg_struct_volume.c
    struct/model/dg_struct_enclosure.c
    struct/model/dg_struct_surface.c
    struct/model/dg_struct_socket.c
    struct/model/dg_struct_carrier_intent.c
    struct/compile/dg_struct_dirty.c
    struct/compile/dg_struct_occupancy.c
    struct/compile/dg_struct_enclosure_graph.c
    struct/compile/dg_struct_surface_graph.c
    struct/compile/dg_struct_support_graph.c
    struct/compile/dg_struct_carrier_compile.c
    struct/compile/dg_struct_compile.c
    decor/model/dg_decor_host.c
    decor/model/dg_decor_item.c
    decor/model/dg_decor_rulepack.c
    decor/model/dg_decor_override.c
    decor/compile/dg_decor_dirty.c
    decor/compile/dg_decor_instances.c
    decor/compile/dg_decor_tiles.c
    decor/compile/dg_decor_promote.c
    decor/compile/dg_decor_compile.c
    vehicle/d_vehicle.c
    vehicle/d_vehicle_validate.c
    job/d_job.c
    job/d_job_planner.c
    job/d_job_validate.c
    net/d_net.c
    net/d_net_apply.c
    net/d_net_cmd.c
    net/d_net_proto.c
    net/d_net_schema.c
    net/d_net_session.c
    net/d_net_transport.c
    replay/d_replay.c
    view/d_view.c
    ui/d_ui.c
    sim/d_sim.c
    sim/d_sim_process.c
    sim/d_sim_hash.c
    sim/act/dg_delta_registry.c
    sim/act/dg_delta_buffer.c
    sim/act/dg_delta_commit.c
    sim/act/dg_capability.c
    sim/act/dg_action.c
    sim/act/dg_action_registry.c
    sim/pkt/dg_pkt_common.c
    sim/pkt/pkt_hash.c
    sim/pkt/registry/dg_type_registry.c
    sim/pkt/idmap/dg_idmap.c
    sim/sched/dg_phase.c
    sim/sched/dg_budget.c
    sim/sched/dg_work_item.c
    sim/sched/dg_work_queue.c
    sim/sched/dg_hash.c
    sim/sched/dg_replay.c
    sim/sched/dg_sched.c
    sim/bus/dg_event_bus.c
    sim/bus/dg_message_bus.c
    sim/bus/dg_field_layer.c
    sim/bus/dg_field.c
    sim/lod/dg_rep.c
    sim/lod/dg_representable.c
    sim/lod/dg_stride.c
    sim/lod/dg_accum.c
    sim/lod/dg_lod_index.c
    sim/lod/dg_interest.c
    sim/lod/dg_promo.c
    sim/sense/dg_observation_buffer.c
    sim/sense/dg_sensor.c
    sim/sense/dg_sensor_registry.c
    sim/prop/dg_prop.c
    sim/prop/dg_prop_registry.c
    sim/prop/dg_prop_lod.c
    sim/prop/dg_prop_cache.c
    core/graph/dg_graph.c
    core/graph/dg_graph_adj.c
    core/graph/dg_graph_iter.c
    core/graph/dg_graph_sort.c
    core/graph/dg_graph_registry.c
    core/graph/part/dg_graph_part.c
    core/graph/part/dg_graph_boundary.c
    sim/dg_dirtyset.c
    sim/dg_rebuild_work.c
    sim/dg_rebuild.c
    sim/sim.c
)

# Header-only scaffolding for the deterministic refactor (no compiled logic yet).
target_sources(domino_core PRIVATE
    core/det_invariants.h
    core/dg_order_key.h
    core/dg_det_hash.h
    core/dg_pose.h
    core/dg_quant.h
    core/graph/dg_graph.h
    core/graph/dg_graph_node.h
    core/graph/dg_graph_edge.h
    core/graph/dg_graph_adj.h
    core/graph/dg_graph_iter.h
    core/graph/dg_graph_sort.h
    core/graph/dg_graph_registry.h
    core/graph/part/dg_graph_part.h
    core/graph/part/dg_graph_boundary.h
    agent/dg_agent_ids.h
    agent/dg_agent_comp.h
    agent/dg_agent.h
    agent/mind/dg_mind.h
    agent/mind/dg_mind_registry.h
    agent/act/dg_intent_buffer.h
    agent/act/dg_intent_dispatch.h
    agent/group/dg_group.h
    agent/group/dg_group_ctrl.h
    sim/sched/d_sim_sched.h
    sim/sched/dg_phase.h
    sim/sched/dg_budget.h
    sim/sched/dg_work_item.h
    sim/sched/dg_work_queue.h
    sim/sched/dg_hash.h
    sim/sched/dg_replay.h
    sim/sched/dg_sched.h
    sim/dg_dirtyset.h
    sim/dg_rebuild_work.h
    sim/dg_rebuild.h
    sim/pkt/d_sim_pkt.h
    sim/pkt/dg_pkt_common.h
    sim/pkt/dg_pkt_event.h
    sim/pkt/dg_pkt_message.h
    sim/pkt/dg_pkt_field.h
    sim/pkt/dg_pkt_observation.h
    sim/pkt/dg_pkt_intent.h
    sim/pkt/dg_pkt_delta.h
    sim/pkt/dg_pkt_probe.h
    sim/pkt/pkt_hash.h
    sim/pkt/registry/dg_type_registry.h
    sim/pkt/idmap/dg_idmap.h
    sim/bus/d_sim_bus.h
    sim/bus/dg_event_bus.h
    sim/bus/dg_message_bus.h
    sim/bus/dg_field_layer.h
    sim/bus/dg_field.h
    sim/lod/d_sim_lod.h
    sim/lod/dg_rep.h
    sim/lod/dg_representable.h
    sim/lod/dg_stride.h
    sim/lod/dg_accum.h
    sim/lod/dg_lod_index.h
    sim/lod/dg_interest.h
    sim/lod/dg_promo.h
    sim/act/d_sim_act.h
    sim/act/dg_delta_registry.h
    sim/act/dg_delta_buffer.h
    sim/act/dg_delta_commit.h
    sim/act/dg_capability.h
    sim/act/dg_action.h
    sim/act/dg_action_registry.h
    sim/sense/d_sim_sense.h
    sim/sense/dg_observation_buffer.h
    sim/sense/dg_sensor.h
    sim/sense/dg_sensor_registry.h
    sim/know/d_sim_know.h
    sim/vis/d_sim_vis.h
    sim/prop/d_sim_prop.h
    sim/prop/dg_prop.h
    sim/prop/dg_prop_registry.h
    sim/prop/dg_prop_lod.h
    sim/prop/dg_prop_cache.h
    world/domain/d_world_domain.h
    world/domain/dg_domain.h
    world/domain/dg_domain_registry.h
    world/domain/dg_domain_query.h
    world/domain/dg_domain_lod.h
    world/frame/d_world_frame.h
    world/frame/dg_frame.h
    world/frame/dg_frame_graph.h
    world/frame/dg_frame_eval.h
    world/frame/dg_anchor.h
    trans/compile/d_trans_compile.h
    trans/model/dg_trans_ids.h
    trans/model/dg_trans_alignment.h
    trans/model/dg_trans_section.h
    trans/model/dg_trans_attachment.h
    trans/model/dg_trans_junction.h
    trans/compile/dg_trans_compile.h
    trans/compile/dg_trans_microseg.h
    trans/compile/dg_trans_frame.h
    trans/compile/dg_trans_slotmap.h
    trans/compile/dg_trans_dirty.h
    struct/model/d_struct_model.h
    struct/model/dg_struct_ids.h
    struct/model/dg_struct_instance.h
    struct/model/dg_struct_footprint.h
    struct/model/dg_struct_volume.h
    struct/model/dg_struct_enclosure.h
    struct/model/dg_struct_surface.h
    struct/model/dg_struct_socket.h
    struct/model/dg_struct_carrier_intent.h
    struct/compile/d_struct_compile.h
    struct/compile/dg_struct_compile.h
    struct/compile/dg_struct_occupancy.h
    struct/compile/dg_struct_enclosure_graph.h
    struct/compile/dg_struct_surface_graph.h
    struct/compile/dg_struct_support_graph.h
    struct/compile/dg_struct_carrier_compile.h
    struct/compile/dg_struct_dirty.h
    struct/phys/d_struct_phys.h
    decor/d_decor.h
    decor/model/d_decor_model.h
    decor/compile/d_decor_compile.h
    decor/model/dg_decor_ids.h
    decor/model/dg_decor_host.h
    decor/model/dg_decor_item.h
    decor/model/dg_decor_rulepack.h
    decor/model/dg_decor_override.h
    decor/compile/dg_decor_dirty.h
    decor/compile/dg_decor_instances.h
    decor/compile/dg_decor_tiles.h
    decor/compile/dg_decor_promote.h
    decor/compile/dg_decor_compile.h
    res/dg_tlv_schema.h
    res/dg_tlv_validate.h
    res/dg_tlv_canon.h
)

if(WIN32)
    target_sources(domino_core PRIVATE system/dsys_terminal_detect_winnt.c)
elseif(UNIX)
    target_sources(domino_core PRIVATE system/dsys_terminal_detect_posix.c)
else()
    target_sources(domino_core PRIVATE system/dsys_terminal_detect_stub.c)
endif()

target_include_directories(domino_core PUBLIC
    ${DOMINIUM_INCLUDE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}
)

set_target_properties(domino_core PROPERTIES
    C_STANDARD 90
    C_STANDARD_REQUIRED ON
    C_EXTENSIONS OFF
)

if(WIN32)
    target_link_libraries(domino_core PRIVATE user32 gdi32)
endif()
